
	- XML importer will pull the elim seeds from the CAT XML file in
	  preparation for us being able to display a full bracket.

	- Sanitized the room pool printout

	- Fixed a bug where entering judges on the tournament admin side would not
	  save judge coach ratings.

	- Added TouchPunch support which should make the menus and drag and drop
	  functions work better on touch devices such as iPads and smartphones.  (I
	  haven't been able to extensively test this as I do not have an iPad or
	  iPhone.  It works pretty well in Android).

	- Added the ability to text or email blast by section; if you click on the
	  room or judges from a single section of speech or debate, and click over
	  on the right on "text/email blast this section", you can send a message
	  that will be accompanied by the pairing for that round to a single
	  section's debaters and judges, if you have a room move or judge change or
	  something.

	- Award ceremony printout will bear a warning when there are ballots still
	  pending entry in that event.

	- Fixed a bug where hired judges were not being given judging assignments
	  by the mass paneler.

	- Fixed a bug with online ballot entry that marked all the tags for results
	  as blank and thus, y'know, didn't work.

	- Fixed a timezone bug with standing school fees.

	- Fixed an issue with the IE snake in elims, and added another option to
	  swap/protect for schools among students with the same 1st tiebreaker
	  score in addition to the current option where students who are less than
	  2 seeds apart are swapped.

	- Fixed the school code generator to better handle "University of" style
	  school names so their short-name codes didn't always end up being
	  "UniOf".

==CHANGES RELEASED 1.2.13==

	- Added a feature where if a strike/conflict gets duplicated many many
	  times, deleting just one of them will delete all identical ones.

	- Added the ability to add coach notes or special jobs, together with ADA