@@ -1,0 +1,88 @@
+<%args>
+	$entry
+	$type => undef
+</%args>
+<%init>
+
+	my $abbr = $entry->event->abbr;
+
+	if ($type eq "rated") {
+
+		Tab::Judge->set_sql( by_entry_rated => "
+			select distinct judge.*
+			from judge, rating, entry
+			where judge.id = rating.judge
+			and judge.active = 1
+			and judge.school != entry.school
+			and rating.entry = entry.id
+			and entry.id = ? 
+			order by judge.id
+		");
+
+		return Tab::Judge->search_by_entry_rated($entry->id);
+
+	} elsif ($type eq "conflicted") { 
+
+		Tab::Judge->set_sql( by_personal_conflict => "
+			select distinct judge.*
+			from judge, strike, entry
+			where judge.id = strike.judge
+			and strike.entry = entry.id
+			and judge.school != entry.school
+			and entry.id = ? 
+			order by judge.id
+		");
+
+		Tab::Judge->set_sql( by_school_conflict => "
+			select distinct judge.*
+			from judge, strike, entry
+			where judge.id = strike.judge
+			and strike.school = entry.school
+			and judge.school != entry.school
+			and entry.id = ? 
+			order by judge.id
+		");
+
+		Tab::Judge->set_sql( by_event_conflict => "
+			select distinct judge.*
+			from judge, strike, entry
+			where judge.id = strike.judge
+			and strike.event = entry.event
+			and judge.school != entry.school
+			and entry.id = ? 
+			order by judge.id
+		");
+
+		my @p_judges = Tab::Judge->search_by_personal_conflict($entry->id);
+		my @s_judges = Tab::Judge->search_by_school_conflict($entry->id);
+		my @e_judges = Tab::Judge->search_by_event_conflict($entry->id);
+		my @o_judges = $entry->school->judges;
+
+		foreach my $p (@p_judges) { 
+			$p->pref("Entry Conflict");
+		}
+
+		foreach my $s (@s_judges) { 
+			$s->pref("School Conflict");
+		}
+
+		foreach my $e (@e_judges) { 
+			$e->pref("Does not judge $abbr");
+		}
+
+		foreach my $o (@o_judges) { 
+			$o->pref("Own Judge");
+		}
+
+		Tab::debuglog("Baylor: PC is ".scalar @p_judges." SC is ".scalar @s_judges." EC is ".scalar @e_judges." and Own is ".@o_judges) if $entry->id == 394383;
+
+		my @judges = (@p_judges, @s_judges, @e_judges, @o_judges);
+
+		my %seen = (); 
+		@judges = grep { ! $seen{$_->id} ++ } @judges;
+
+		return @judges;
+
+	}
+
+</%init>
