@@ -5,11 +5,12 @@
 <%init>
 
 	if ($event) { 
-
+		
 		Tab::Entry->set_sql( by_hybrid_event => "
-			select distinct entry.* 
-			from entry, strike
+			select distinct entry.*, entry.code as othername
+			from entry, strike, school
 			where strike.school = ?
+			and entry.school = school.id
 			and strike.type = \"hybrid\"
 			and strike.entry = entry.id
 			and entry.event = ? 
@@ -17,33 +18,49 @@
 		");
 
 		Tab::Entry->set_sql( by_my_hybrid_event => "
-			select distinct entry.* 
-			from entry, strike
+			select distinct entry.*, entry.code as othername
+			from entry, strike, school
 			where entry.school = ?
 			and entry.event = ? 
 			and strike.type = \"hybrid\"
 			and strike.entry = entry.id
+			and strike.school = school.id
 		");
 
-		return Tab::Entry->search_by_hybrid_event($school->id, $event->id), Tab::Entry->search_by_my_hybrid_event($school->id, $event->id);
+		my @others = Tab::Entry->search_by_hybrid_event($school->id, $event->id), 
+		my @owns = Tab::Entry->search_by_my_hybrid_event($school->id, $event->id);
+
+		foreach my $other (@others) { 
+			$other->othername($other->school->short_name);
+		}
+
+		foreach my $own (@owns) { 
+			my $strike = Tab::Strike->search( type => "hybrid", entry => $own->id)->first;
+			$own->othername($strike->school->short_name);
+		}
+
+		return @others, @owns;
+
 
 	} else { 
 
 		Tab::Entry->set_sql( by_hybrid => "
-			select distinct entry.* 
-			from entry, strike
+			select distinct entry.*, school.name as othername
+			from entry, strike, school
 			where strike.school = ?
 			and strike.type = \"hybrid\"
 			and strike.entry = entry.id
+			and school.id = entry.school
 			order by entry.code
 		");
 
 		Tab::Entry->set_sql( by_my_hybrid => "
-			select distinct entry.* 
-			from entry, strike
+			select distinct entry.*, school.name as othername
+			from entry, strike, school
 			where entry.school = ?
 			and strike.type = \"hybrid\"
 			and strike.entry = entry.id
+			and school.id = strike.school
 		");
 
 		return Tab::Entry->search_by_hybrid($school->id), Tab::Entry->search_by_my_hybrid($school->id);
